--- a/GLTFLoader.html
+++ b/GLTFLoader.html
@@ -20,8 +20,8 @@
 
 <body>
     <script src="./node/three.js"></script>
-    <script src="./node/OrbitControls.js"></script>
-    <script src="./node/GLTFLoader.js"></script>
+    <script src="./node/controls/OrbitControls.js"></script>
+    <script src="./node/loaders/GLTFLoader.js"></script>
     <script>
         // 创建一个场景
         let scene = new THREE.Scene();
