--- a/camera/perspectiveCamera.html
+++ b/camera/perspectiveCamera.html
@@ -20,7 +20,7 @@
 
 <body>
     <script src="../node/three.js"></script>
-    <script src="../node/OrbitControls.js"></script>
+    <script src="../node/controls/OrbitControls.js"></script>
     <script>
         /**
          * 创建一个透视投影相机对象
