--- a/drawLine.html
+++ b/drawLine.html
@@ -13,7 +13,7 @@
     </style>
     <!--引入three.js三维引擎-->
     <script src="./node/three.js"></script>
-    <script src="./node/OrbitControls.js"></script>
+    <script src="./node/controls/OrbitControls.js"></script>
 </head>
 
 <body>
