--- a/geometryDemo.html
+++ b/geometryDemo.html
@@ -20,7 +20,7 @@
 
 <body>
     <script src="./node/three.js"></script>
-    <script src="./node/OrbitControls.js"></script>
+    <script src="./node/controls/OrbitControls.js"></script>
     <!-- 运用 三围样条曲线、管道模型、纹理对象（重复、偏移）实现demo -->
     <script>
         // 创建一个场景
