--- a/camera/orthographicCamera.html
+++ b/camera/orthographicCamera.html
@@ -20,7 +20,7 @@
 
 <body>
     <script src="../node/three.js"></script>
-    <script src="../node/OrbitControls.js"></script>
+    <script src="../node/controls/OrbitControls.js"></script>
     <script>
         /**
          * 创建一个正投影相机对象 六个参数 
