--- a/line.html
+++ b/line.html
@@ -20,7 +20,7 @@
 
 <body>
     <script src="./node/three.js"></script>
-    <script src="./node/OrbitControls.js"></script>
+    <script src="./node/controls/OrbitControls.js"></script>
     <script>
         // 创建一个场景
         let scene = new THREE.Scene();
